# StaticBezier

./: CMakeLists.txt  StaticBezier.kdev4  bernstein.h  bezier_1d.h  bezier_2d.h  bezier_generator.h  glm_include.h  main.cpp  simple_ffd.kdev4
.kdev4/: StaticBezier.kdev4
gui/: App.cpp  App.h  CMakeLists.txt  FFDGui.cpp  FFDGui.h  GeometryEngine.cpp  GeometryEngine.h  Renderer.cpp  Renderer.h  main.cpp  shaders.qrc  textures.qrc
image/: CMakeLists.txt  ffd_image.cpp
mesh_edit/: CMakeLists.txt
stl/: stl_import.h
